--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -23,16 +23,16 @@ jobs:
       - run: npm install
       - run: npm run build
 
-      # 3. Preparar l'entorn Android (Java)
+      # 3. Preparar l'entorn Android (Java 21 IMPORTANT)
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '17'
+          java-version: '21'  # <--- AQUEST ÉS EL CANVI CLAU
 
       # 4. Sincronitzar Capacitor
       - run: npx cap sync android
 
-      # 5. Donar permisos al fitxer gradlew (IMPRA)
+      # 5. Donar permisos al fitxer gradlew
       - name: Grant execute permission for gradlew
         run: chmod +x android/gradlew
 
