--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -13,37 +13,30 @@ jobs:
       packages: write
 
     steps:
-      # 1. Baixar el codi
       - uses: actions/checkout@v3
 
-      # 2. Instal·lar Node.js i construir la web
       - uses: actions/setup-node@v3
         with:
           node-version: 20
       - run: npm install
       - run: npm run build
 
-      # 3. Preparar l'entorn Android (Java 21 IMPORTANT)
+      # AQUI ESTA LA CLAU: JAVA 21
       - uses: actions/setup-java@v3
         with:
           distribution: 'zulu'
-          java-version: '21'  # <--- AQUEST ÉS EL CANVI CLAU
+          java-version: '21'
 
-      # 4. Sincronitzar Capacitor
       - run: npx cap sync android
 
-      # 5. Donar permisos al fitxer gradlew
       - name: Grant execute permission for gradlew
         run: chmod +x android/gradlew
 
-      # 6. Construir l'APK
       - name: Build Debug APK
         run: cd android && ./gradlew assembleDebug
 
-      # 7. Pujar l'APK per descarregar
       - name: Upload APK
         uses: actions/upload-artifact@v4
         with:
           name: laliga-app-debug
           path: android/app/build/outputs/apk/debug/app-debug.apk
-          
