--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,29 +1,44 @@
-// Top-level build file where you can add configuration options common to all sub-projects/modules.
+cat > .github/workflows/build.yml <<EOF
+name: Build Android APK
 
-buildscript {
-    
-    repositories {
-        google()
-        mavenCentral()
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.7.2'
-        classpath 'com.google.gms:google-services:4.4.2'
+on:
+  push:
+    branches: [ "main", "master" ]
+  workflow_dispatch:
 
-        // NOTE: Do not place your application dependencies here; they belong
-        // in the individual module build.gradle files
-    }
-}
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
 
-apply from: "variables.gradle"
+    steps:
+      - uses: actions/checkout@v3
 
-allprojects {
-    repositories {
-        google()
-        mavenCentral()
-    }
-}
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 20
+      - run: npm install
+      - run: npm run build
 
-task clean(type: Delete) {
-    delete rootProject.buildDir
-}
+      # AQUI ESTA LA CLAU: FORÇAR JAVA 21
+      - uses: actions/setup-java@v3
+        with:
+          distribution: 'zulu'
+          java-version: '21'
+
+      - run: npx cap sync android
+
+      - name: Grant execute permission for gradlew
+        run: chmod +x android/gradlew
+
+      - name: Build Debug APK
+        run: cd android && ./gradlew assembleDebug
+
+      - name: Upload APK
+        uses: actions/upload-artifact@v4
+        with:
+          name: laliga-app-debug
+          path: android/app/build/outputs/apk/debug/app-debug.apk
+EOF
